[package]
name = "mbms"
version = "0.1.0"
authors = ["Paul Adenot <paul@paul.cx>"]

[[bin]]
name = "mbms"
path = "src/main.rs"

[dependencies]
monome-rs = { path = "../monome-rs/" }
log = "0.4.2"
audio-clock = "0.2.0"
pretty_env_logger = "0.2.3"

[dependencies.bela]
path = "../bela-rs/"

[dependencies.mlr-rs]
path = "../mlr-rs/mlr-rs/"

[dependencies.mds]
path = "../mds/"

[dependencies.mmms]
path = "../mmms/"

[dependencies.mbms-traits]
path = "../mbms-traits/"
